# distributed-file-system

./: README.md  build.sh  docker-compose.yml
auth-service/: auth-service.cabal  stack.yaml
auth-service/.stack-work/install/x86_64-osx/lts-7.10/8.0.1/flag-cache/: aeson-compat-0.3.6-5wE6V2cyaFcB5no9HXBKW5  auth-service-0.1.0.0-wI9v1QGqysGBqaKj7NRCA  conduit-1.2.8-5FcKXI45VDc6lGPbFuJAWM  conduit-extra-1.1.15-53svZ1V22a02WgMiq2YICw  monad-logger-0.3.20.1-Id6Qefl6M7BBA3QajigPhK  monad-loops-0.4.3-1xZFtRVMQPC4X8bjTBWqNi  nats-1.1.1-FA0qPqydh5CKA7eud8Tv6L  path-pieces-0.2.1-EQ6YdjSujhVE8ECatsqK1q  persistent-2.6-1lE9S4auQBGDBFFzb0JIqD  persistent-postgresql-2.6-GvBYHyPf2H6GQQdyjSi6nK  persistent-sqlite-2.6-Pc2g69EmL1JEJWvbhyALK  persistent-template-2.5.1.6-L1UJyeURwQyFqq8arz68gW  postgresql-libpq-0.9.2.0-IWEdPrPraPeE94ud73Ope3  postgresql-simple-0.5.2.1-3INwbAr3KaOko5GoR6I2w  pwstore-fast-2.4.4-HPFB6d7iulZFVWcZWd8b8K  resource-pool-0.2.3.2-9vTgJsy3ECMB5KkdzRIRAh  silently-1.2.5-Ek776fxSdtm4h8aXqt6CNw  stm-chans-3.0.0.4-4lLWE8CZnvmDZJW5bKkus1  uuid-types-1.0.3-1qmdgBeDGlbCUibOmxVGqx
auth-service/.stack-work/install/x86_64-osx/lts-7.10/8.0.1/lib/x86_64-osx-ghc-8.0.1/auth-service-0.1.0.0-AuA6V8MYMHu6qIHpXBhabJ/: Models.dyn_hi  Models.hi  Service.dyn_hi  Service.hi
auth-service/.stack-work/install/x86_64-osx/lts-7.10/8.0.1/lib/x86_64-osx-ghc-8.0.1/auth-service-0.1.0.0-JwBzpQmQVS12AcEZyGm9zz/: DB.dyn_hi  DB.hi  Model.dyn_hi  Model.hi  libHSauth-service-0.1.0.0-JwBzpQmQVS12AcEZyGm9zz-ghc8.0.1.dylib
auth-service/.stack-work/install/x86_64-osx/lts-7.10/8.0.1/lib/x86_64-osx-ghc-8.0.1/auth-service-0.1.0.0-L5GUpOkZ96VKiSsVIED2ov/: DB.dyn_hi  DB.hi  Lib.dyn_hi
auth-service/.stack-work/install/x86_64-osx/lts-7.10/8.0.1/pkgdb/: auth-service-0.1.0.0-L5GUpOkZ96VKiSsVIED2ov.conf  auth-service-0.1.0.0-wI9v1QGqysGBqaKj7NRCA.conf  package.cache
auth-service/app/: Main.hs
auth-service/src/: AuthApi.hs  DB.hs  Model.hs  Models.hs  Service.hs
directory-service/: stack.yaml  (+1 more)
file-system/: .gitignore  file-system.cabal  stack.yaml
file-system/.stack-work/docker/_home/: .ssh
file-system/.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-7.10/8.0.1/flag-cache/: MonadRandom-0.4.2.3-8TfCm6PGvGYB7omozORhov  aeson-0.11.2.1-5ZQWuTFmffALcfpzDCXoOz  aeson-pretty-0.8.2-FONEppYcAcNL67yNmD5AQ1  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  ansi-wl-pprint-0.6.7.3-LVnipygDrAR1FEMFhjxcQX  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0  asn1-encoding-0.9.4-2Zu5ldLYD571Aw26w0CWF6  asn1-parse-0.9.4-Ai83ACtrOir9VlSOQtWm2F  asn1-types-0.3.2-4Rz223aP8OG6vnHYiLX5Ab  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base16-bytestring-0.1.1.6-5dPoF8dzhwzBaEB2MvnmIS  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  blaze-html-0.8.1.2-2kD96kJB6JEGow1dP8IL6C  blaze-markup-0.7.1.0-5a5pBG0fO8kJX4ke3K7j3D  bson-0.3.2.3-3QA3aP5EtCyCltXUzEKOsQ  bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0  byteable-0.1.1-15aIBCArSOBEnGxArzrDTM  byteorder-1.0.4-BbL4c17EpZrL9PcZm0xys9  bytestring-builder-0.10.8.1.0-4GkSrJiY0n01lBdCh7onK  bytestring-conversion-0.3.1-EvX949he2UAKBbGbE7IZfu  case-insensitive-1.2.0.7-FlqweN7AuKj9EdU2arVEt4  cereal-0.5.4.0-2FJYHGgtE5C3SxaZjt25xS  cipher-aes-0.2.11-6IDqXzfBW6B3WK2bKJbiBh  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  connection-0.2.6-2HNmlyTwJgHAuxKuraNKr  cookie-0.4.2.1-2a2c54yIyBn79Ul3iLWclJ  cprng-aes-0.6.1-COLYQrn2KP0KrG5tq2u9OS  crypto-cipher-types-0.0.9-Iwzx9devSK6HQoOjujg46u  crypto-random-0.0.9-GQAZIw8UH93GFERaAFFYYo  cryptohash-0.11.9-9KNu0EEbreBFrmNJAeHgYz  cryptonite-0.19-G9PYO4oOEqhDTta2u9rAaU  data-binary-ieee754-0.4.4-F1HjhwdV1xx5grS0eMjeg2  data-default-class-0.1.2.0-FYQpjIylblBDctdkHAFeXA  dlist-0.8.0.2-GWAMmbX9rLg3tqrbOizHGv  double-conversion-2.0.1.0-GBJeLbJOvPcIufCPOIwofV  easy-file-0.2.1-bAUkz2rC2kFhBbPjw2Of5  (+76 more)
file-system/.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-7.10/8.0.1/pkgdb/: bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0.conf  file-system-0.1.0.0-4eoDtvzcA271XCHRahcVq5.conf  package.cache
file-system/.stack-work/install/x86_64-osx/lts-7.10/8.0.1/flag-cache/: MonadRandom-0.4.2.3-8TfCm6PGvGYB7omozORhov  asn1-encoding-0.9.4-2Zu5ldLYD571Aw26w0CWF6  asn1-parse-0.9.4-Ai83ACtrOir9VlSOQtWm2F  asn1-types-0.3.2-4Rz223aP8OG6vnHYiLX5Ab  base16-bytestring-0.1.1.6-5dPoF8dzhwzBaEB2MvnmIS  bson-0.3.2.3-3QA3aP5EtCyCltXUzEKOsQ  bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0  byteable-0.1.1-15aIBCArSOBEnGxArzrDTM  cereal-0.5.4.0-2FJYHGgtE5C3SxaZjt25xS  cipher-aes-0.2.11-6IDqXzfBW6B3WK2bKJbiBh  connection-0.2.6-2HNmlyTwJgHAuxKuraNKr  cprng-aes-0.6.1-COLYQrn2KP0KrG5tq2u9OS  crypto-cipher-types-0.0.9-Iwzx9devSK6HQoOjujg46u  crypto-random-0.0.9-GQAZIw8UH93GFERaAFFYYo  cryptohash-0.11.9-9KNu0EEbreBFrmNJAeHgYz  data-binary-ieee754-0.4.4-F1HjhwdV1xx5grS0eMjeg2  file-system-0.1.0.0-JdxbGI9G1bTK6pcIwWhh6C  hashtables-1.2.1.0-97BixhaJIWTIDAaThqJujl  hourglass-0.2.10-I8h0J4RSF89FN6CuD9x2Xx  http-client-0.4.31.1-FGf7eP2gsutEVI3BLIDKxS  http-client-tls-0.2.4.1-EVDHmjFZ3NF90yCYHfJAYK  mongoDB-2.1.1.1-HGeHL7diW4ABP90GyOfvAQ  nonce-1.0.2-187zSgt2OIA84d9i9xgwRX  pem-0.2.2-qPMQP6sZm3HgQEmiBojNt  random-shuffle-0.0.4-LfeDYNPfwrQ2o9p6tw2M9l  securemem-0.1.9-AlUbMorzPNe4lwnV15ASIa  servant-client-0.8.1-L4KVGyLjl3E4Fgj7RNvyaP  servant-server-0.8.1-2W4dYHeOEv33BK078P3wA  socks-0.5.5-GieRokcgjQCIzUyRn9wVby  tls-1.3.8-A2985O2lM6w8pg5FsvX04K  wai-app-static-3.1.6.1-6csRgbgolyoCCOLw42RlBs  x509-1.6.4-6B9ZDqgGkCVIm38P2dxBHw  x509-store-1.6.2-5D7pnN6Y3TrHd6cIzseTgS  x509-system-1.6.4-FYvwHDAYsJxAxMFnaUNC4t  x509-validation-1.6.5-5ya4HcKwboeGStaXrxfWjW
file-system/.stack-work/install/x86_64-osx/lts-7.10/8.0.1/pkgdb/: bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0.conf  file-system-0.1.0.0-4eoDtvzcA271XCHRahcVq5.conf  package.cache
file-system/src/: Lib.hs  Service.hs
frequent/: frequent.cabal
frequent/src/: Frequent.hs
sys-api/: stack.yaml  sys-api.cabal
sys-api/src/: AuthAPI.hs  DirectoryAPI.hs  FileserverAPI.hs  RegistryAPI.hs
(+115 files in other folders)
