name:                file-system
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/file-system#readme
license:             BSD3
license-file:        LICENSE
author:              Ciaran Finn
maintainer:          cifinn@tcd.ie
copyright:           2016 Ciaran Finn
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , time
                     , text
                     , mtl
                     , aeson
                     , bytestring
                     , bson
                     , mongoDB
                     , servant
                     , servant-server
                     , servant-client
                     , transformers
                     , warp
                     , wai
  default-extensions:  DataKinds
                     , DeriveAnyClass
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , OverloadedStrings
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TypeOperators
                     , TypeSynonymInstances
  default-language:    Haskell2010

executable file-system-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , file-system
  default-language:    Haskell2010

test-suite file-system-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , file-system
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/file-system
