name:                frequent
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/frequent#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Frequent
                     , MongoDb
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , utf8-string
                     , cryptocipher
                     , cryptonite
                     , base64-bytestring
                     , time
                     , directory
                     , sys-api
                     , aeson
                     , iso8601-time
                     , mtl
                     , transformers
                     , text
                     , bson-generic
                     , bson
                     , resourcet
                     , mongoDB
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/frequent
