name:                sys-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/sys-api#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RegistryAPI
                     , FileserverAPI
                     , AuthAPI
                     , DirectoryAPI
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-server
                     , servant-client
                     , wai
                     , warp
                     , bson
                     , http-client
                     , warp
                     , wai
                     , bson-generic
                     , bytestring
                     , text
                     , mtl
                     , transformers
                     , monad-logger
                     , persistent
                     , persistent-postgresql
                     , persistent-template
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sys-api
